add validation token